--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "erp",
+  "name": "calendar",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:erp": "node dist/erp/server/server.mjs"
+    "test": "ng test"
   },
   "prettier": {
     "printWidth": 100,
@@ -22,7 +21,7 @@
     ]
   },
   "private": true,
-  "packageManager": "npm@11.6.2",
+  "packageManager": "npm@11.7.0",
   "dependencies": {
     "@angular/animations": "^21.0.6",
     "@angular/cdk": "^21.0.5",
@@ -32,14 +31,12 @@
     "@angular/forms": "^21.0.0",
     "@angular/material": "^21.0.5",
     "@angular/platform-browser": "^21.0.0",
-    "@angular/platform-server": "^21.0.0",
     "@angular/router": "^21.0.0",
-    "@angular/ssr": "^21.0.4",
     "@ng-bootstrap/ng-bootstrap": "^20.0.0",
     "@ng-select/ng-select": "^21.1.3",
     "@popperjs/core": "^2.11.8",
+    "@rollup/rollup-darwin-arm64": "^4.54.0",
     "bootstrap": "^5.3.8",
-    "express": "^5.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
@@ -48,8 +45,6 @@
     "@angular/cli": "^21.0.4",
     "@angular/compiler-cli": "^21.0.0",
     "@angular/localize": "^21.0.0",
-    "@types/express": "^5.0.1",
-    "@types/node": "^20.17.19",
     "jsdom": "^27.1.0",
     "typescript": "~5.9.2",
     "vitest": "^4.0.8"
